adding more content to about and projects sections

--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,8 @@ form textarea {
 }
 
 form button {
-    margin-top: 10px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 /* Pied de page */
